[gd_scene load_steps=3 format=3 uid="uid://w38jxx7hhrnn"]

[ext_resource type="Script" path="res://src/note_progress/note_progress.gd" id="1_8rs6d"]
[ext_resource type="PackedScene" uid="uid://dwjq2cj72ofwl" path="res://src/clef/note_spacing.tscn" id="2_8ngqi"]

[node name="NoteProgress" type="ColorRect"]
offset_right = 364.0
offset_bottom = 47.0
color = Color(1, 1, 1, 0)
script = ExtResource("1_8rs6d")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(4, 60)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -30.0
offset_right = 4.0
offset_bottom = 30.0
grow_vertical = 2
color = Color(1, 0, 1, 1)

[node name="ComputerNotes" type="Control" parent="."]
anchors_preset = 0

[node name="PlayerNotes" type="Control" parent="."]
anchors_preset = 0

[node name="NoteSpacing" parent="." instance=ExtResource("2_8ngqi")]
visible = false
